updates doc and root secret templates

--- a/deploy/helm-chart/mushop/templates/service-broker-secret.yaml
+++ b/deploy/helm-chart/mushop/templates/service-broker-secret.yaml
@@ -3,18 +3,17 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: service-broker
-  labels:
-{{ include "mushop.labels" . | indent 4 }}
+  labels: {{ include "mushop.labels" . | nindent 4 }}
 type: Opaque
 data:
-  {{ if eq .Values.global.mock.service "all" }}
+  {{- if eq .Values.global.mock.service "all" }}
   tenancy: {{ "mock" | b64enc }}
   user: {{ "mock" | b64enc }}
   fingerprint: {{ "mock" | b64enc }}
   region: {{ "mock" | b64enc }}
   passphrase: {{ "mock" | b64enc }}
   privatekey: {{ "mock" | b64enc }}
-  {{ else }}
+  {{- else if .Values.catalog.enabled }}
   tenancy: {{ required "Value .secrets.serviceBroker.tenantId is required!" .Values.secrets.serviceBroker.tenantId | b64enc }}
   user: {{ required "Value .secrets.serviceBroker.userId is required!" .Values.secrets.serviceBroker.userId | b64enc }}
   fingerprint: {{ required "Value .secrets.serviceBroker.fingerprint is required!" .Values.secrets.serviceBroker.fingerprint | b64enc }}
@@ -22,4 +21,4 @@ data:
   passphrase: {{ required "Value .secrets.serviceBroker.passphrase is required!" .Values.secrets.serviceBroker.passphrase | b64enc }}
   privatekey: |-
     {{ (.Files.Get "secrets/oci_service_broker_api_key.pem") | b64enc }}
-  {{ end }}
+  {{- end }}
