--- a/deploy/helm-chart/mushop/templates/streams-secret.yaml
+++ b/deploy/helm-chart/mushop/templates/streams-secret.yaml
@@ -2,8 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ .Release.Name }}-streams-secret
-  labels:
-{{ include "mushop.labels" . | indent 4 }}
+  labels: {{ include "mushop.labels" . | nindent 4 }}
 type: Opaque
 data:
   {{ if eq .Values.global.mock.service "all" }}
