--- a/deploy/kubernetes/mushop.yaml
+++ b/deploy/kubernetes/mushop.yaml
@@ -767,7 +767,8 @@ spec:
           periodSeconds: 5
         volumeMounts:
         - name: wallet
-          mountPath: "/usr/lib/oracle/19.3/client64/lib/network/admin"
+          mountPath: /usr/lib/oracle/19.3/client64/lib/network/admin
+          readOnly: true
       volumes:
       - name: wallet
         secret:
