--- a/deploy/docker-compose/docker-compose.yml
+++ b/deploy/docker-compose/docker-compose.yml
@@ -18,7 +18,7 @@ services:
 
   # Storefront application middleware
   api:
-    image: phx.ocir.io/intvravipati/mushop/api:1.1.0
+    image: phx.ocir.io/intvravipati/mushop/api:2.0.0
     hostname: api
     restart: always
     cap_drop:
@@ -56,7 +56,7 @@ services:
 
   # Storefront backend API service
   storefront:
-    image: phx.ocir.io/intvravipati/mushop/storefront:1.0.8
+    image: phx.ocir.io/intvravipati/mushop/storefront:2.0.0
     hostname: storefront
     restart: always
     cap_drop:
@@ -74,7 +74,7 @@ services:
 
   # OCI Catalog service
   catalogue:
-    image: phx.ocir.io/intvravipati/mushop/catalogue:0.0.1
+    image: phx.ocir.io/intvravipati/mushop/catalogue:1.1
     hostname: catalogue
     restart: always
     cap_drop:
@@ -151,7 +151,7 @@ services:
 
   # OCI Stream
   stream:
-    image: phx.ocir.io/intvravipati/mushop/stream:0.0.1
+    image: phx.ocir.io/intvravipati/mushop/stream:1.0.0
     hostname: stream
     restart: always
     cap_drop:
@@ -179,7 +179,7 @@ services:
     read_only: true
 
   user:
-    image: phx.ocir.io/intvravipati/mushop/user:0.0.1
+    image: phx.ocir.io/intvravipati/mushop/user:1.0.0
     hostname: user
     restart: always
     cap_drop:
@@ -188,18 +188,6 @@ services:
       - NET_BIND_SERVICE
     read_only: true
     environment:
-      - MONGO_HOST=user-db:27017
-
-  user-db:
-    image: phx.ocir.io/intvravipati/mushop/user-db:0.0.1
-    hostname: user-db
-    restart: always
-    cap_drop:
-      - all
-    cap_add:
-      - CHOWN
-      - SETGID
-      - SETUID
-    read_only: true
-    tmpfs:
-      - /tmp:rw,noexec,nosuid
+      - OADB_USER
+      - OADB_PW
+      - OADB_SERVICE
