--- a/deploy/helm-chart/mushop/charts/user/templates/oadb-admin-secret.yaml
+++ b/deploy/helm-chart/mushop/charts/user/templates/oadb-admin-secret.yaml
@@ -5,4 +5,4 @@ metadata:
   labels: {{ include "user.labels" . | nindent 4 }}
 type: Opaque
 data:
-  oadb_admin_pw: {{ .Values.secrets.oadbAdminPassword | quote | b64enc }}
+  oadb_admin_pw: {{ .Values.secrets.oadbAdminPassword | default "na" | b64enc }}
