--- a/deploy/helm-chart/mushop/values.yaml
+++ b/deploy/helm-chart/mushop/values.yaml
@@ -55,6 +55,9 @@ secrets:
     fingerprint:
     region:
     passphrase:
+    # future support
+    streamId:
+    streamName:
   serviceBroker:
     tenantId:
     userId:
