--- a/deploy/kubernetes/manifests/orders-dep.yaml
+++ b/deploy/kubernetes/manifests/orders-dep.yaml
@@ -14,38 +14,39 @@ spec:
       containers:
       - name: orders
         image: phx.ocir.io/intvravipati/mushop/orders:1.0.2
+        imagePullPolicy: Always
         env:
         - name: ZIPKIN
           value: zipkin.jaeger.svc.cluster.local
         - name: JAVA_OPTS
           value: -Xms128m -Xmx256m -XX:+UseG1GC -Dlogging.level.mushop.orders=TRACE  -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
-        - name: JDBC_URL
-          value: "jdbc:oracle:thin:@appdb_tp?TNS_ADMIN=./config"
+        - name: TNS_ADMIN
+          value: /app/config
         - name: OADB_USER
           valueFrom:
             secretKeyRef:
-              name: atp-secret
-              key: orders_oadb_user
+              name: orders-oadb-connection
+              key: oadb_user
         - name: OADB_PW
           valueFrom:
             secretKeyRef:
-              name: atp-secret
-              key: orders_oadb_pw
+              name: orders-oadb-connection
+              key: oadb_pw
         - name: OADB_SERVICE
           valueFrom:
             secretKeyRef:
-              name: atp-secret
-              key: orders_oadb_service
+              name: orders-oadb-connection
+              key: oadb_service   
         - name: ATP_TRUST_PASS
           valueFrom:
-          secretKeyRef:
-              name: atp-secret
-              key: orders_trust_pass 
+            secretKeyRef:
+              name: orders-oadb-connection
+              key: oadb_wallet_pw 
         - name: ATP_KEY_PASS
           valueFrom:
-          secretKeyRef:
-              name: atp-secret
-              key: orders_key_pass   
+            secretKeyRef:
+              name: orders-oadb-connection
+              key: oadb_wallet_pw
         ports:
         - containerPort: 80
         volumeMounts:
