--- a/deploy/kubernetes/mushop.yaml
+++ b/deploy/kubernetes/mushop.yaml
@@ -206,33 +206,33 @@ spec:
           value: zipkin.jaeger.svc.cluster.local
         - name: JAVA_OPTS
           value: -Xms64m -Xmx128m -XX:+UseG1GC -Dlogging.level.mushop.carts=TRACE  -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
-        - name: JDBC_URL
-          value: "jdbc:oracle:thin:@db3_tp?TNS_ADMIN=./config"
+        - name: TNS_ADMIN
+          value: /app/config
         - name: OADB_USER
           valueFrom:
             secretKeyRef:
-              name: atp-secret
-              key: carts_oadb_user
+              name: carts-oadb-connection
+              key: oadb_user
         - name: OADB_PW
           valueFrom:
             secretKeyRef:
-              name: atp-secret
-              key: carts_oadb_pw
+              name: carts-oadb-connection
+              key: oadb_pw
         - name: OADB_SERVICE
           valueFrom:
             secretKeyRef:
-              name: atp-secret
-              key: carts_oadb_service   
+              name: carts-oadb-connection
+              key: oadb_service   
         - name: ATP_TRUST_PASS
           valueFrom:
-          secretKeyRef:
-              name: atp-secret
-              key: carts_trust_pass 
+            secretKeyRef:
+              name: carts-oadb-connection
+              key: oadb_wallet_pw 
         - name: ATP_KEY_PASS
           valueFrom:
-          secretKeyRef:
-              name: atp-secret
-              key: carts_key_pass
+            secretKeyRef:
+              name: carts-oadb-connection
+              key: oadb_wallet_pw
         volumeMounts:
         - mountPath: /tmp
           name: tmp-volume
@@ -446,38 +446,39 @@ spec:
       containers:
       - name: orders
         image: phx.ocir.io/intvravipati/mushop/orders:1.0.2
+        imagePullPolicy: Always
         env:
         - name: ZIPKIN
           value: zipkin.jaeger.svc.cluster.local
         - name: JAVA_OPTS
           value: -Xms128m -Xmx256m -XX:+UseG1GC -Dlogging.level.mushop.orders=TRACE  -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
-        - name: JDBC_URL
-          value: "jdbc:oracle:thin:@appdb_tp?TNS_ADMIN=./config"
+        - name: TNS_ADMIN
+          value: /app/config
         - name: OADB_USER
           valueFrom:
             secretKeyRef:
-              name: atp-secret
-              key: orders_oadb_user
+              name: orders-oadb-connection
+              key: oadb_user
         - name: OADB_PW
           valueFrom:
             secretKeyRef:
-              name: atp-secret
-              key: orders_oadb_pw
+              name: orders-oadb-connection
+              key: oadb_pw
         - name: OADB_SERVICE
           valueFrom:
             secretKeyRef:
-              name: atp-secret
-              key: orders_oadb_service
+              name: orders-oadb-connection
+              key: oadb_service   
         - name: ATP_TRUST_PASS
           valueFrom:
-          secretKeyRef:
-              name: atp-secret
-              key: orders_trust_pass 
+            secretKeyRef:
+              name: orders-oadb-connection
+              key: oadb_wallet_pw 
         - name: ATP_KEY_PASS
           valueFrom:
-          secretKeyRef:
-              name: atp-secret
-              key: orders_key_pass   
+            secretKeyRef:
+              name: orders-oadb-connection
+              key: oadb_wallet_pw
         ports:
         - containerPort: 80
         volumeMounts:
@@ -616,39 +617,39 @@ spec:
         - name: OCI_TENANT_ID
           valueFrom:
             secretKeyRef:
-            name: streams-secret
-            key: oci_tenant_id
+              name: streams-secret
+              key: oci_tenant_id
         - name: OCI_USER_ID
           valueFrom:
             secretKeyRef:
-            name: streams-secret
-            key: oci_user_id
+              name: streams-secret
+              key: oci_user_id
         - name: OCI_FINGERPRINT
           valueFrom:
             secretKeyRef:
-            name: streams-secret
-            key: oci_fingerprint
+              name: streams-secret
+              key: oci_fingerprint
         - name: OCI_PASS_PHRASE
           valueFrom:
             secretKeyRef:
-            name: streams-secret
-            key: oci_pass_phrase
-            optional: true
+              name: streams-secret
+              key: oci_pass_phrase
+              optional: true
         - name: OCI_API_KEY
           valueFrom:
             secretKeyRef:
-            name: streams-secret
-            key: oci_api_key
+              name: streams-secret
+              key: oci_api_key
         - name: OCI_REGION
           valueFrom:
             secretKeyRef:
-            name: streams-secret
-            key: oci_region
+              name: streams-secret
+              key: oci_region
         - name: OCI_COMPARTMENT_ID
           valueFrom:
             secretKeyRef:
-            name: streams-secret
-            key: oci_compartment_id
+              name: streams-secret
+              key: oci_compartment_id
         ports:
         - containerPort: 80
           protocol: TCP
@@ -707,39 +708,39 @@ spec:
         - name: OCI_TENANT_ID
           valueFrom:
             secretKeyRef:
-            name: streams-secret
-            key: oci_tenant_id
+              name: streams-secret
+              key: oci_tenant_id
         - name: OCI_USER_ID
           valueFrom:
             secretKeyRef:
-            name: streams-secret
-            key: oci_user_id
+              name: streams-secret
+              key: oci_user_id
         - name: OCI_FINGERPRINT
           valueFrom:
             secretKeyRef:
-            name: streams-secret
-            key: oci_fingerprint
+              name: streams-secret
+              key: oci_fingerprint
         - name: OCI_PASS_PHRASE
           valueFrom:
             secretKeyRef:
-            name: streams-secret
-            key: oci_pass_phrase
-            optional: true
+              name: streams-secret
+              key: oci_pass_phrase
+              optional: true
         - name: OCI_API_KEY
           valueFrom:
             secretKeyRef:
-            name: streams-secret
-            key: oci_api_key
+              name: streams-secret
+              key: oci_api_key
         - name: OCI_REGION
           valueFrom:
             secretKeyRef:
-            name: streams-secret
-            key: oci_region
+              name: streams-secret
+              key: oci_region
         - name: OCI_COMPARTMENT_ID
           valueFrom:
             secretKeyRef:
-            name: streams-secret
-            key: oci_compartment_id
+              name: streams-secret
+              key: oci_compartment_id
         ports:
         - containerPort: 80
           protocol: TCP
