--- a/deploy/kubernetes/manifests/catalogue-dep.yaml
+++ b/deploy/kubernetes/manifests/catalogue-dep.yaml
@@ -54,14 +54,14 @@ spec:
             httpGet:
               path: /health
               port: 80
-            initialDelaySeconds: 300
-            periodSeconds: 3
+            initialDelaySeconds: 120
+            periodSeconds: 10
           readinessProbe:
             httpGet:
               path: /health
               port: 80
-            initialDelaySeconds: 180
-            periodSeconds: 3          
+            initialDelaySeconds: 10
+            periodSeconds: 5
           resources:
             requests:
               cpu: 100m
@@ -69,3 +69,11 @@ spec:
             limits:
               cpu: 200m
               memory: 128Mi
+          volumeMounts:
+          - name: wallet
+            mountPath: "/usr/lib/oracle/19.3/client64/lib/network/admin"
+      volumes:
+      - name: wallet
+        secret:
+          secretName: catalogue-oadb-wallet
+          defaultMode: 256
