--- a/deploy/kubernetes/mushop.yaml
+++ b/deploy/kubernetes/mushop.yaml
@@ -272,6 +272,7 @@ spec:
   selector:
     name: carts
 ---
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -327,14 +328,14 @@ spec:
             httpGet:
               path: /health
               port: 80
-            initialDelaySeconds: 300
-            periodSeconds: 3
+            initialDelaySeconds: 120
+            periodSeconds: 10
           readinessProbe:
             httpGet:
               path: /health
               port: 80
-            initialDelaySeconds: 180
-            periodSeconds: 3          
+            initialDelaySeconds: 10
+            periodSeconds: 5
           resources:
             requests:
               cpu: 100m
@@ -342,6 +343,14 @@ spec:
             limits:
               cpu: 200m
               memory: 128Mi
+          volumeMounts:
+          - name: wallet
+            mountPath: "/usr/lib/oracle/19.3/client64/lib/network/admin"
+      volumes:
+      - name: wallet
+        secret:
+          secretName: catalogue-oadb-wallet
+          defaultMode: 256
 ---
 apiVersion: v1
 kind: Service
