begins refactoring mushop chart

--- a/deploy/helm-chart/mushop/charts/api/values.yaml
+++ b/deploy/helm-chart/mushop/charts/api/values.yaml
@@ -28,7 +28,7 @@ securityContext:
   readOnlyRootFilesystem: true
 
 hpa:
-  enabled: false
+  enabled: true
   minReplicas: 1
   maxReplicas: 10
   metrics:
