--- a/deploy/helm-chart/mushop/charts/catalogue/values.yaml
+++ b/deploy/helm-chart/mushop/charts/catalogue/values.yaml
@@ -22,7 +22,7 @@ env:
   zipkin: zipkin.jaeger.svc.cluster.local
 
 hpa:
-  enabled: false
+  enabled: true
   minReplicas: 1
   maxReplicas: 10
   metrics:
