--- a/deploy/helm-chart/mushop/charts/edge/values.yaml
+++ b/deploy/helm-chart/mushop/charts/edge/values.yaml
@@ -12,8 +12,9 @@ resources:
   requests:
     cpu: 50m
     memory: 128Mi
+
 hpa:
-  enabled: false
+  enabled: true
   minReplicas: 1
   maxReplicas: 10
   metrics:
