--- a/deploy/helm-chart/mushop/charts/edge/templates/edge-hpa.yaml
+++ b/deploy/helm-chart/mushop/charts/edge/templates/edge-hpa.yaml
@@ -2,12 +2,12 @@
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "edge.fullname" . }}
+  name: {{ include "edge-router.fullname" . }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "edge.fullname" . }}
+    name: {{ include "edge-router.fullname" . }}
   minReplicas: {{ .Values.hpa.minReplicas }}
   maxReplicas: {{ .Values.hpa.maxReplicas }}
   metrics:
