--- a/deploy/helm-chart/mushop/charts/user/templates/oadb-connection-secret.yaml
+++ b/deploy/helm-chart/mushop/charts/user/templates/oadb-connection-secret.yaml
@@ -6,9 +6,9 @@ metadata:
 type: Opaque
 data:
   {{- if eq .Values.global.mock.service "all" }}
-  oadb_service: {{ "mock" | b64enc }}
-  oadb_user: {{ "mock" | b64enc }}
-  oadb_pw: {{ "mock" | b64enc }}
+  oadb_service: {{ .Values.secrets.oadbService | default "mock" | b64enc }}
+  oadb_user: {{ .Values.secrets.oadbUser | default "mock" | b64enc }}
+  oadb_pw: {{ .Values.secrets.oadbPassword | default "mock" | b64enc }}
   {{- else }}
   oadb_service: {{ required "Value .secrets.oadbService is required!" .Values.secrets.oadbService | b64enc }}
   oadb_user: {{ required "Value .secrets.oadbUser is required!" .Values.secrets.oadbUser | b64enc }}
