progress towards a common atp instance

--- a/deploy/helm-chart/mushop/templates/service-broker-secret.yaml
+++ b/deploy/helm-chart/mushop/templates/service-broker-secret.yaml
@@ -12,7 +12,8 @@ data:
   fingerprint: {{ "mock" | b64enc }}
   region: {{ "mock" | b64enc }}
   passphrase: {{ "mock" | b64enc }}
-  privatekey: {{ "mock" | b64enc }}
+  privatekey: |-
+    {{ .Files.Get .Values.secrets.serviceBroker.keyFile | default "" | b64enc }}
   {{- else if .Values.catalog.enabled }}
   tenancy: {{ required "Value .secrets.serviceBroker.tenantId is required!" .Values.secrets.serviceBroker.tenantId | b64enc }}
   user: {{ required "Value .secrets.serviceBroker.userId is required!" .Values.secrets.serviceBroker.userId | b64enc }}
@@ -20,5 +21,5 @@ data:
   region: {{ required "Value .secrets.serviceBroker.region is required!" .Values.secrets.serviceBroker.region | b64enc }}
   passphrase: {{ required "Value .secrets.serviceBroker.passphrase is required!" .Values.secrets.serviceBroker.passphrase | b64enc }}
   privatekey: |-
-    {{ (.Files.Get "secrets/oci_service_broker_api_key.pem") | b64enc }}
+    {{ .Files.Get .Values.secrets.serviceBroker.keyFile | default "" | b64enc }}
   {{- end }}
