--- a/deploy/helm-chart/mushop/templates/streams-secret.yaml
+++ b/deploy/helm-chart/mushop/templates/streams-secret.yaml
@@ -5,14 +5,15 @@ metadata:
   labels: {{ include "mushop.labels" . | nindent 4 }}
 type: Opaque
 data:
-  {{ if eq .Values.global.mock.service "all" }}
+  {{- if eq .Values.global.mock.service "all" }}
   oci_compartment_id: {{ "mock" | b64enc }}
   oci_tenant_id: {{ "mock" | b64enc }}
   oci_user_id: {{ "mock" | b64enc }}
   oci_fingerprint: {{ "mock" | b64enc }}
   oci_region: {{ "mock" | b64enc }}
-  oci_pass_phrase:  {{ "mock" | b64enc }}
-  oci_api_key:  {{ "mock" | b64enc }}
+  oci_pass_phrase: {{ "mock" | b64enc }}
+  oci_api_key: |-
+    {{ .Files.Get .Values.secrets.streams.keyFile | default "" | b64enc }}
   {{ else }}  
   oci_compartment_id: {{ required "Value .secrets.streams.compartmentId is required!" .Values.secrets.streams.compartmentId | b64enc }}
   oci_tenant_id: {{ required "Value .secrets.streams.tenantId is required!" .Values.secrets.streams.tenantId | b64enc }}
@@ -21,5 +22,5 @@ data:
   oci_region: {{ required "Value .secrets.streams.region is required!" .Values.secrets.streams.region | b64enc }}
   oci_pass_phrase: {{ required "Value .secrets.streams.passphrase is required!" .Values.secrets.streams.passphrase | b64enc }}
   oci_api_key: |-
-    {{ (.Files.Get "secrets/oci_streams_api_key.pem") | b64enc }}
+    {{ .Files.Get .Values.secrets.streams.keyFile | default "" | b64enc }}
   {{ end }}
