--- a/deploy/helm-chart/mushop/values-dev.yaml
+++ b/deploy/helm-chart/mushop/values-dev.yaml
@@ -61,9 +61,11 @@ user:
 
 secrets:
   streams:
+    streamName: <STREAM_NAME>
     compartmentId: <OCI_COMPARTMENT_ID>
     tenantId: <OCI_TENANT_ID>
     userId: <OCI_USER_ID>
-    fingerprint: <OCI_FINGERPRINT>
     region: <OCI_REGION>
+    fingerprint: <OCI_FINGERPRINT>
     passphrase: <OCI_PASSPHRASE>
+    keyFile: <OCI_API_KEY_FILE>
