--- a/deploy/helm-chart/mushop/values-prod.yaml
+++ b/deploy/helm-chart/mushop/values-prod.yaml
@@ -71,12 +71,17 @@ secrets:
     compartmentId:
     tenantId:
     userId:
-    fingerprint:
     region:
+    fingerprint:
     passphrase:
+    keyFile:
+    streamName:
+    # future support
+    streamId:
   serviceBroker:
     tenantId:
     userId:
-    fingerprint:
     region:
+    fingerprint:
     passphrase:
+    keyFile:
