--- a/deploy/helm-chart/mushop/values-test.yaml
+++ b/deploy/helm-chart/mushop/values-test.yaml
@@ -59,9 +59,17 @@ secrets:
     compartmentId:
     tenantId:
     userId:
-    fingerprint:
     region:
+    fingerprint:
     passphrase:
+    keyFile:
     streamName:
     # future support
     streamId:
+  serviceBroker:
+    tenantId:
+    userId:
+    region:
+    fingerprint:
+    passphrase:
+    keyFile:
