--- a/deploy/helm-chart/mushop/values-shipping.yaml
+++ b/deploy/helm-chart/mushop/values-shipping.yaml
@@ -10,13 +10,14 @@ stream:
 
 secrets:
   streams:
-    compartmentId: OCI_COMPARTMENT_ID
-    tenantId: OCI_TENANT_ID
-    userId: OCI_USER_ID
-    fingerprint: OCI_FINGERPRINT
-    region: OCI_REGION
-    passphrase: OCI_PASSPHRASE
-    streamName: STREAM_NAME
+    streamName: <STREAM_NAME>
+    compartmentId: <OCI_COMPARTMENT_ID>
+    tenantId: <OCI_TENANT_ID>
+    userId: <OCI_USER_ID>
+    region: <OCI_REGION>
+    fingerprint: <OCI_FINGERPRINT>
+    passphrase: <OCI_PASSPHRASE>
+    keyFile: <OCI_API_KEY_FILE>
 
 ingress:
   enabled: false
