--- a/deploy/helm-chart/mushop/charts/carts/templates/oadb-wallet-secret.yaml
+++ b/deploy/helm-chart/mushop/charts/carts/templates/oadb-wallet-secret.yaml
@@ -1,8 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "orders.fullname" . }}-wallet
-  labels: {{ include "orders.labels" . | nindent 4 }}
+  name: {{ include "carts.fullname" . }}-wallet
+  labels: {{ include "carts.labels" . | nindent 4 }}
 type: Opaque
 data:
-{{- (.Files.Glob "secrets/Wallet*/*").AsSecrets | nindent 2 }}
+{{- $globWallet := .Files.Glob (printf "%s*/*" (.Values.secrets.oadbWallet | default "secrets/Wallet" | trimSuffix "/")) }}
+{{- ($globWallet).AsSecrets | nindent 2 }}
