--- a/deploy/helm-chart/mushop/charts/orders/templates/orders-deployment.yaml
+++ b/deploy/helm-chart/mushop/charts/orders/templates/orders-deployment.yaml
@@ -1,9 +1,61 @@
+{{- define "orders.oadb.connection" -}}
+- name: OADB_USER
+  valueFrom:
+    secretKeyRef:
+      name: {{ include "orders.fullname" . }}-connection
+      key: oadb_user
+- name: OADB_PW
+  valueFrom:
+    secretKeyRef:
+      name: {{ include "orders.fullname" . }}-connection
+      key: oadb_pw
+- name: OADB_SERVICE
+  valueFrom:
+    secretKeyRef:
+      name: {{ include "orders.fullname" . }}-connection
+      key: oadb_service
+- name: ATP_TRUST_PASS
+  valueFrom:
+    secretKeyRef:
+      name: {{ include "orders.fullname" . }}-connection
+      key: oadb_wallet_pw
+- name: ATP_KEY_PASS
+  valueFrom:
+    secretKeyRef:
+      name: {{ include "orders.fullname" . }}-connection
+      key: oadb_wallet_pw
+{{- end -}}
+
+{{- define "orders.oadb.admin" -}}
+- name: OADB_ADMIN_PW
+  valueFrom:
+    secretKeyRef:
+      name: {{ include "orders.fullname" . }}-admin
+      key: oadb_admin_pw
+{{- end -}}
+
+{{- define "orders.mount.wallet" -}}
+- mountPath: /app/config/keystore.jks
+  subPath: keystore.jks
+  name: wallet
+  readOnly: true
+- mountPath: /app/config/truststore.jks
+  subPath: truststore.jks
+  name: wallet
+  readOnly: true
+- mountPath: /app/config/tnsnames.ora
+  subPath: tnsnames.ora
+  name: wallet
+  readOnly: true
+{{- end -}}
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "orders.fullname" . }}
   labels:
-{{ include "orders.labels" . | indent 4 }}
+{{ include "orders.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -16,6 +68,24 @@ spec:
         app.kubernetes.io/name: {{ include "orders.name" . }}
         app.kubernetes.io/instance: {{ .Release.Name }}
     spec:
+      initContainers:
+        # DbTools Init 
+        {{- if .Values.secrets.oadbAdminPassword }}
+        - name: initdb
+          image: "{{ .Values.dbtools.repository }}:{{ .Values.dbtools.tag }}"
+          imagePullPolicy: {{ .Values.dbtools.pullPolicy }}
+          command: ["/bin/sh","-c"]
+          args:
+            # NOTE: will use alternate syntax for osb
+            - sqlplus ADMIN/${OADB_ADMIN_PW}@${OADB_SERVICE} @service.sql ${OADB_USER} ${OADB_PW}
+          env:
+            {{- include "orders.oadb.connection" . | nindent 12 }}
+            {{- include "orders.oadb.admin" . | nindent 12 }}
+          volumeMounts:
+            {{- include "orders.mount.wallet" . | nindent 12 }}
+            - name: initdb
+              mountPath: /work/
+        {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -30,46 +100,11 @@ spec:
               value: {{ .Values.env.javaOpts }}
             - name: TNS_ADMIN
               value: {{ .Values.env.tnsAdmin }}
-            - name: OADB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "orders.fullname" . }}-connection
-                  key: oadb_user
-            - name: OADB_PW
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "orders.fullname" . }}-connection
-                  key: oadb_pw
-            - name: OADB_SERVICE
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "orders.fullname" . }}-connection
-                  key: oadb_service
-            - name: ATP_TRUST_PASS
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "orders.fullname" . }}-connection
-                  key: oadb_wallet_pw
-            - name: ATP_KEY_PASS
-              valueFrom:
-                secretKeyRef:
-                  name: {{ include "orders.fullname" . }}-connection
-                  key: oadb_wallet_pw
+            {{- include "orders.oadb.connection" . | nindent 12 }}
           volumeMounts:
             - mountPath: /tmp
               name: tmp-volume
-            - mountPath: /app/config/keystore.jks
-              subPath: keystore.jks
-              name: wallet
-              readOnly: true
-            - mountPath: /app/config/truststore.jks
-              subPath: truststore.jks
-              name: wallet
-              readOnly: true
-            - mountPath: /app/config/tnsnames.ora
-              subPath: tnsnames.ora
-              name: wallet
-              readOnly: true
+            {{- include "orders.mount.wallet" . | nindent 12 }}
       volumes:
         - name: tmp-volume
           emptyDir:
@@ -78,5 +113,11 @@ spec:
           secret:
             secretName: {{ include "orders.fullname" . }}-wallet
             defaultMode: 256
+        - name: initdb
+          configMap:
+            name: {{ include "orders.fullname" . }}-init
+            items:
+            - key: atp.init.sql
+              path: service.sql
       nodeSelector:
           beta.kubernetes.io/os: linux
