--- a/deploy/helm-chart/mushop/charts/carts/values.yaml
+++ b/deploy/helm-chart/mushop/charts/carts/values.yaml
@@ -5,9 +5,14 @@ image:
   tag: 1.0.1
   pullPolicy: Always
 
+dbtools:
+  repository: phx.ocir.io/intvravipati/mushop/dbtools
+  tag: 1.0.1
+  pullPolicy: IfNotPresent
+
 secrets:
-  oadbService: mcarts_tp
-  oadbUser: carts_user
+  oadbService:
+  oadbUser:
   oadbPassword:
   oadbWalletPassword:
 
