--- a/deploy/helm-chart/mushop/charts/orders/values.yaml
+++ b/deploy/helm-chart/mushop/charts/orders/values.yaml
@@ -5,9 +5,14 @@ image:
   tag: 1.0.2
   pullPolicy: Always
 
+dbtools:
+  repository: phx.ocir.io/intvravipati/mushop/dbtools
+  tag: 1.0.1
+  pullPolicy: IfNotPresent
+
 secrets:
-  oadbService: morders_tp
-  oadbUser: orders_user
+  oadbService:
+  oadbUser:
   oadbPassword:
   oadbWalletPassword:
 
