--- a/deploy/helm-chart/mushop/charts/user/templates/oadb-wallet-secret.yaml
+++ b/deploy/helm-chart/mushop/charts/user/templates/oadb-wallet-secret.yaml
@@ -5,4 +5,5 @@ metadata:
   labels: {{ include "user.labels" . | nindent 4 }}
 type: Opaque
 data:
-{{- (.Files.Glob "secrets/Wallet*/*").AsSecrets | nindent 2 }}
+{{- $globWallet := .Files.Glob (printf "%s*/*" (.Values.secrets.oadbWallet | default "secrets/Wallet" | trimSuffix "/")) }}
+{{- ($globWallet).AsSecrets | nindent 2 }}
