--- a/deploy/helm-chart/mushop/charts/user/values.yaml
+++ b/deploy/helm-chart/mushop/charts/user/values.yaml
@@ -5,9 +5,14 @@ image:
   tag: 1.0.0
   pullPolicy: Always
 
+dbtools:
+  repository: phx.ocir.io/intvravipati/mushop/dbtools
+  tag: 1.0.1
+  pullPolicy: IfNotPresent
+
 secrets:
-  oadbService: musers_tp
-  oadbUser: musers_service
+  oadbService:
+  oadbUser:
   oadbPassword:
   oadbAdminPassword:
 
