--- a/deploy/helm-chart/setup/values.yaml
+++ b/deploy/helm-chart/setup/values.yaml
@@ -19,6 +19,9 @@ grafana:
     datasources:
       enabled: true
       label: grafana_datasource
+    dashboards:
+      enabled: true
+      label: grafana_dashboard
 
 # https://github.com/kubernetes-sigs/service-catalog/blob/master/charts/catalog/README.md
 catalog:
