Adjustments to support a separate deployment for mertrics

--- a/deploy/helm-chart/mushop/templates/ingress.yaml
+++ b/deploy/helm-chart/mushop/templates/ingress.yaml
@@ -21,7 +21,8 @@ spec:
         paths:
         - path: /
           backend:
-            serviceName: {{ $.Release.Name }}-edge
+            # intentionally w/o .Release.Name for metrics workshop
+            serviceName: edge
             servicePort: {{ $.Values.edge.service.port }}
     {{- end -}}
     {{ else }}
@@ -29,7 +30,8 @@ spec:
         paths:
         - path: /
           backend:
-            serviceName: {{ .Release.Name }}-edge
+            # intentionally w/o .Release.Name for metrics workshop
+            serviceName: edge
             servicePort: {{ .Values.edge.service.port }}
     {{- end -}}
   {{- if .Values.ingress.tls }}
