--- a/deploy/helm-chart/mushop/charts/edge/templates/edge-svc.yaml
+++ b/deploy/helm-chart/mushop/charts/edge/templates/edge-svc.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "edge-router.fullname" . }}
+  # intentionally w/o .Release.Name for metrics workshop
+  name: edge
   labels:
 {{ include "edge-router.labels" . | indent 4 }}
 spec:
