--- a/deploy/helm-chart/mushop-provision/values.yaml
+++ b/deploy/helm-chart/mushop-provision/values.yaml
@@ -18,7 +18,7 @@ global:
     - carts
     - orders
     - users
-  namespace: mushop-dev
+  namespace: mushop
 
 # Each separate service can get its own ATP created
 # by setting the osb.atp=true and providing the compartmentId
