Updates for provisioning chart to gracefully handle value

--- a/deploy/helm-chart/mushop-provision/templates/ocicredentials-secret.yaml
+++ b/deploy/helm-chart/mushop-provision/templates/ocicredentials-secret.yaml
@@ -7,11 +7,12 @@ metadata:
 {{ include "provision.labels" . | indent 4 }}
 type: Opaque
 data:
+  {{- $keyFile := .Files.Get .Values.secrets.serviceBroker.keyFile }}
   tenancy: {{ required "Value .secrets.serviceBroker.tenantId is required!" .Values.secrets.serviceBroker.tenantId | b64enc }}
   user: {{ required "Value .secrets.serviceBroker.userId is required!" .Values.secrets.serviceBroker.userId | b64enc }}
   fingerprint: {{ required "Value .secrets.serviceBroker.fingerprint is required!" .Values.secrets.serviceBroker.fingerprint | b64enc }}
   region: {{ required "Value .secrets.serviceBroker.region is required!" .Values.secrets.serviceBroker.region | b64enc }}
   passphrase: {{ required "Value .secrets.serviceBroker.passphrase is required!" .Values.secrets.serviceBroker.passphrase | b64enc }}
   privatekey: |-
-    {{ (.Files.Get "secrets/oci_service_broker_api_key.pem") | b64enc }}
+    {{ required (printf "API Key file %s is required!" .Values.secrets.serviceBroker.keyFile) $keyFile | b64enc }}
 
