--- a/deploy/helm-chart/mushop-provision/templates/cluster-service-broker.yaml
+++ b/deploy/helm-chart/mushop-provision/templates/cluster-service-broker.yaml
@@ -5,4 +5,4 @@ metadata:
   labels:
 {{ include "provision.labels" . | indent 4 }}
 spec:
-  url: http://{{ .Values.global.osb.name }}.{{ .Values.global.namespace }}:{{ .Values.global.osb.port }}
+  url: http://{{ .Values.global.osb.name }}.{{ .Values.global.osb.namespace }}:{{ .Values.global.osb.port }}
