--- a/deploy/helm-chart/mushop-provision/templates/service-binding-global.yaml
+++ b/deploy/helm-chart/mushop-provision/templates/service-binding-global.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.global.osb }}
+{{ if .Values.global.osb.atp }}
 apiVersion: servicecatalog.k8s.io/v1beta1
 kind: ServiceBinding
 metadata:
