--- a/deploy/helm-chart/mushop-provision/templates/service-binding-services.yaml
+++ b/deploy/helm-chart/mushop-provision/templates/service-binding-services.yaml
@@ -2,9 +2,10 @@
 {{- $svcName := . }}
 {{/* The svcKey has the value of e.g. .Values.catalogue. This is so we can use it to check if we need to overwrite the values*/}}
 {{- $svcKey := index $.Values (printf "%s" $svcName) -}}
+{{- $svcOsbKey := index $.Values (printf "%s.osb" $svcName) -}}
 
 {{/* Check if need to create instance for the particular service */}}
-{{ if $svcKey.osb.atp -}}
+{{ if $svcOsbKey.atp -}}
 apiVersion: servicecatalog.k8s.io/v1beta1
 kind: ServiceBinding
 metadata:
