--- a/deploy/helm-chart/mushop-provision/templates/service-instance-services.yaml
+++ b/deploy/helm-chart/mushop-provision/templates/service-instance-services.yaml
@@ -1,10 +1,11 @@
+{{- $globalOsbKey := index .Values (printf "%s.osb" "global") }}
 {{- range .Values.global.services }}
 {{- $svcName := . }}
-{{/* The svcKey has the value of e.g. .Values.catalogue. This is so we can use it to check if we need to overwrite the values*/}}
-{{- $svcKey := index $.Values (printf "%s" $svcName) -}}
+{{/* The svcOsbKey has the value of e.g. .Values.catalogue.osb This is so we can use it to check if we need to overwrite the values*/}}
+{{- $svcOsbKey := index $.Values (printf "%s.osb" $svcName) -}}
 
 {{/* Check if need to create instance for the particular service */}}
-{{ if $svcKey.osb.atp -}}
+{{ if $svcOsbKey.atp -}}
 apiVersion: servicecatalog.k8s.io/v1beta1
 kind: ServiceInstance
 metadata:
@@ -15,8 +16,9 @@ spec:
   clusterServiceClassExternalName: atp-service
   clusterServicePlanExternalName: standard
   parameters:
-    name: {{ $svcName | quote }}
-    compartmentId: {{ $svcKey.osb.compartmentId | quote }}
+    name: {{ (printf "MuShop %s Db" $svcName) | quote }}
+    {{- $compartmentId := $svcOsbKey.compartmentId | default $globalOsbKey.compartmentId }}
+    compartmentId: {{ required (printf "Value .%s.compartmentId is required!" $svcOsbKey) $compartmentId | quote }}
     cpuCount: 1
     storageSizeTBs: 1
     licenseType: BYOL
