minor change to deploy/setup

--- a/deploy/helm-chart/mushop/templates/streams-secret.yaml
+++ b/deploy/helm-chart/mushop/templates/streams-secret.yaml
@@ -5,8 +5,8 @@ metadata:
   labels: {{ include "mushop.labels" . | nindent 4 }}
 type: Opaque
 data:
-  {{ $streamKeyFile := .Files.Get .Values.secrets.streams.keyFile }}
-  {{- if $streamKeyFile }}
+  {{- $keyFile := .Files.Get .Values.secrets.streams.keyFile }}
+  {{- if ne .Values.global.mock.service "all" }}
   oci_compartment_id: {{ required "Value .secrets.streams.compartmentId is required!" .Values.secrets.streams.compartmentId | b64enc }}
   oci_tenant_id: {{ required "Value .secrets.streams.tenantId is required!" .Values.secrets.streams.tenantId | b64enc }}
   oci_user_id: {{ required "Value .secrets.streams.userId is required!" .Values.secrets.streams.userId | b64enc }}
@@ -14,5 +14,5 @@ data:
   oci_region: {{ required "Value .secrets.streams.region is required!" .Values.secrets.streams.region | b64enc }}
   oci_pass_phrase: {{ .Values.secrets.streams.passphrase | default "" | b64enc }}
   oci_api_key: |-
-    {{ $streamKeyFile | default "" | b64enc }}
+    {{ required (printf "API Key file %s is missing!" .Values.secrets.streams.keyFile) $keyFile | b64enc }}
   {{ end }}
