helm keep csb and ocicredential

--- a/deploy/helm-chart/provision/templates/cluster-service-broker.yaml
+++ b/deploy/helm-chart/provision/templates/cluster-service-broker.yaml
@@ -3,6 +3,7 @@ kind: ClusterServiceBroker
 metadata:
   name: {{.Values.global.osb.name}}
   labels:
+    "helm.sh/resource-policy": keep
 {{ include "provision.labels" . | indent 4 }}
 spec:
   url: http://{{ .Values.global.osb.name }}.{{ .Values.global.osb.namespace }}:{{ .Values.global.osb.port }}
