--- a/deploy/helm-chart/provision/templates/ocicredentials-secret.yaml
+++ b/deploy/helm-chart/provision/templates/ocicredentials-secret.yaml
@@ -4,6 +4,7 @@ kind: Secret
 metadata:
   name: oci-service-broker
   labels:
+    "helm.sh/resource-policy": keep
 {{ include "provision.labels" . | indent 4 }}
 type: Opaque
 data:
