--- a/deploy/helm-chart/provision/templates/ocicredentials-secret.yaml
+++ b/deploy/helm-chart/provision/templates/ocicredentials-secret.yaml
@@ -3,8 +3,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: oci-service-broker
-  labels:
+  annotations:
     "helm.sh/resource-policy": keep
+  labels:
 {{ include "provision.labels" . | indent 4 }}
 type: Opaque
 data:
