--- a/deploy/helm-chart/provision/templates/secrets-global.yaml
+++ b/deploy/helm-chart/provision/templates/secrets-global.yaml
@@ -5,7 +5,7 @@
 {{- $oadbPw := .Values.global.oadbPassword | default (printf "%s" (randAlphaNum 12)) }}
 
 {{/* If we need to create a global ATP instance to be used by other services */}}
-{{ if .Values.global.osb }}
+{{ if .Values.global.osb.atp }}
 apiVersion: v1
 kind: Secret
 metadata:
