--- a/deploy/helm-chart/provision/templates/secrets-services.yaml
+++ b/deploy/helm-chart/provision/templates/secrets-services.yaml
@@ -36,7 +36,7 @@ data:
   oadb_db_osb: {{ printf `{"dbName":"%s"}` $name | b64enc }}
   oadb_service: {{ printf "%s_tp" $name | b64enc }}
   oadb_wallet_pw: {{ $wpass | b64enc }}
-  oadb_wallet_pw_osb: {{ printf `{"walletPassword":"%s"}` $pass | b64enc }}
+  oadb_wallet_pw_osb: {{ printf `{"walletPassword":"%s"}` $wpass | b64enc }}
 ---
 {{- end }}
 {{- end }}
