--- a/deploy/helm-chart/provision/templates/cluster-service-broker.yaml
+++ b/deploy/helm-chart/provision/templates/cluster-service-broker.yaml
@@ -2,8 +2,9 @@ apiVersion: servicecatalog.k8s.io/v1beta1
 kind: ClusterServiceBroker
 metadata:
   name: {{.Values.global.osb.name}}
-  labels:
+  annotations:
     "helm.sh/resource-policy": keep
+  labels:
 {{ include "provision.labels" . | indent 4 }}
 spec:
   url: http://{{ .Values.global.osb.name }}.{{ .Values.global.osb.namespace }}:{{ .Values.global.osb.port }}
