--- a/deploy/helm-chart/provision/templates/service-instance-global.yaml
+++ b/deploy/helm-chart/provision/templates/service-instance-global.yaml
@@ -2,14 +2,13 @@
 apiVersion: servicecatalog.k8s.io/v1beta1
 kind: ServiceInstance
 metadata:
-  name: {{ .Values.global.osb.instanceName }}-db
+  name: {{ .Values.global.osb.instanceName }}-atp
   labels:
 {{ include "provision.labels" . | indent 4 }}
 spec:
   clusterServiceClassExternalName: atp-service
   clusterServicePlanExternalName: standard
   parameters:
-    # name: {{ .Values.global.osb.instanceName | quote }}
     name: {{ (printf "MuShop %s Db" (randAlphaNum 4)) | quote }}
     compartmentId: {{ required "Value .global.osb.compartmentId is required!" .Values.global.osb.compartmentId | quote }}
     cpuCount: 1
